# Sapphillon-Core

./: Cargo.toml  Makefile  README.md  buf.gen.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: testing.yml
src/: lib.rs  proto.rs  proto_generated.rs  runtime.rs
src/proto/: google.api.expr.v1alpha1.rs  google.bytestream.tonic.rs  google.type.rs  sapphillon.v1.tonic.rs
src/proto_generated/: google.bytestream.rs  google.longrunning.rs  google.longrunning.tonic.rs  sapphillon.v1.rs
