[package]
name = "sapphillon_core"
version = "0.2.0"
edition = "2024"
authors = ["Yuta Takahashi <y.highbridge04@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
description = "Core library for Sapphillon, a Rust-based Workflow runtime."
repository = "https://github.com/Walkmana-25/Sapphillon-Core"
homepage = "https://github.com/Walkmana-25/Sapphillon-Core"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
chrono = "0.4"
env_logger = "0.11"

tonic = "0.12.0"
prost = "0.14.1"
prost-types = "0.13.1"
deno_core = "0.354.0"
deno_runtime = "0.220.0"
deno_permissions = "0.71.0"
deno_error = { version = "0.7.0", features = ["serde", "serde_json", "tokio", "url"] }

[build-dependencies]
tonic-build = "0.12.0"
